htdocs/css/left-nav.css
.left-nav-container {
    width: 0;
    float: left;
    background-color: rgb(20, 27, 77);
    top: 0;
    z-index: -1;
    padding-left: 0;
    color: #f0f0f0;
    overflow: hidden;
    flex-grow: 1;
    height: calc(100vh - 56px);
}

.left-nav-container.active {
    animation-name: show-left-nav;
    animation-duration: 400ms;
    animation-fill-mode: forwards;
}

.left-nav-container.inactive {
    animation-name: hide-left-nav;
    animation-duration: 400ms;
    animation-fill-mode: forwards;
}

@keyframes show-left-nav {
    from {
        width: 0;
        padding-left: 0;
    }
    to {
        width: 256px;
        padding-left: 16px;
    }
}

@keyframes hide-left-nav {
    from {
        width: 256px;
        padding-left: 16px;
    }
    to {
        width: 0;
        padding-left: 0;
    }
}

